force-app/main/default/objects/HeatMap_Entry__c/HeatMap_Entry__c.object-meta.xml
<CustomObject>
    <label>HeatMap Entry</label>
    <nameField>
        <displayFormat>HE-{0000}</displayFormat>
        <label>HeatMap Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HeatMap Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>