force-app/main/default/objects/HeatMap_Entry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HeatMap Entries</relationshipLabel>
    <relationshipName>HeatMap_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>