force-app/main/default/objects/HeatMap_Entry__c/fields/AccountId_ColumnId__c.field-meta.xml
<CustomField>
    <fullName>AccountId_ColumnId__c</fullName>
    <externalId>true</externalId>
    <label>AccountId-ColumnId</label>
    <length>40</length>
    <type>Text</type>
</CustomField>