force-app/main/default/objects/HeatMap_Entry__c/fields/Automated_LCD__c.field-meta.xml
<CustomField>
    <fullName>Automated_LCD__c</fullName>
    <label>Automated LCD</label>
    <type>DateTime</type>
</CustomField>