force-app/main/default/objects/HeatMap_Entry__c/fields/Automated_Object_Count__c.field-meta.xml
<CustomField>
    <fullName>Automated_Object_Count__c</fullName>
    <label>Automated Object Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>