force-app/main/default/objects/HeatMap_Entry__c/fields/Automated_Value__c.field-meta.xml
<CustomField>
    <fullName>Automated_Value__c</fullName>
    <label>Automated Workload Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Protected</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>