force-app/main/default/objects/HeatMap_Entry__c/fields/Cell_Highlight_Override__c.field-meta.xml
<CustomField>
    <fullName>Cell_Highlight_Override__c</fullName>
    <description>Created as part of MKT26-1165 to indicate Workload is consuming 85% of Total License Count. Applies only to Telemetry.</description>
    <formula>IF(
  AND(
		NOT( ISBLANK( Total_License_Count__c ) ), 
		(( Automated_Object_Capacity__c  / Total_License_Count__c) &gt; 0.85 )
	),
	
    &quot;#980000&quot;, &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cell Highlight Override</label>
    <type>Text</type>
</CustomField>