force-app/main/default/objects/HeatMap_Entry__c/fields/HeatMap_Column__c.field-meta.xml
<CustomField>
    <fullName>HeatMap_Column__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>HeatMap Column</label>
    <referenceTo>HeatMap_Column__c</referenceTo>
    <relationshipLabel>HeatMap Entries</relationshipLabel>
    <relationshipName>HeatMap_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>