force-app/main/default/objects/HeatMap_Entry__c/fields/Manual_Entry__c.field-meta.xml
<CustomField>
    <fullName>Manual_Entry__c</fullName>
    <label>Manual Entry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>