force-app/main/default/objects/HeatMap_Entry__c/fields/Manual_Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Manual_Incumbent__c</fullName>
    <label>Manual Incumbent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cohesity</fullName>
            </value>
            <value>
                <fullName>Commvault</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Veeam</fullName>
            </value>
            <value>
                <fullName>Veritas</fullName>
            </value>
            <value>
                <fullName>Zerto</fullName>
            </value>
            <value>
                <fullName>IBM</fullName>
            </value>
            <value>
                <fullName>AWS Native</fullName>
            </value>
            <value>
                <fullName>Azure/M365 Native</fullName>
            </value>
            <value>
                <fullName>GCP Native</fullName>
            </value>
            <value>
                <fullName>Avepoint</fullName>
            </value>
            <value>
                <fullName>KeepIT</fullName>
            </value>
            <value>
                <fullName>Druva</fullName>
            </value>
            <value>
                <fullName>NetApp</fullName>
            </value>
            <value>
                <fullName>Isilon</fullName>
            </value>
            <value>
                <fullName>Pure</fullName>
            </value>
            <value>
                <fullName>Actifio</fullName>
            </value>
            <value>
                <fullName>Arcserve</fullName>
            </value>
            <value>
                <fullName>Avamar</fullName>
            </value>
            <value>
                <fullName>BackupExec</fullName>
            </value>
            <value>
                <fullName>Barracuda</fullName>
            </value>
            <value>
                <fullName>Clumio</fullName>
            </value>
            <value>
                <fullName>Cohesity - FlashRecover</fullName>
            </value>
            <value>
                <fullName>Cohesity - IBM</fullName>
            </value>
            <value>
                <fullName>DataDomain</fullName>
            </value>
            <value>
                <fullName>Dell APEX/Druva</fullName>
            </value>
            <value>
                <fullName>DellEMC DPS (Data Protection Suite)</fullName>
            </value>
            <value>
                <fullName>DellEMC PowerProtect</fullName>
            </value>
            <value>
                <fullName>ExaGrid</fullName>
            </value>
            <value>
                <fullName>HPE Data Protector \ MicroFocus Data Protector</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>