force-app/main/default/objects/HeatMap_Entry__c/fields/Manual_LCD__c.field-meta.xml
<CustomField>
    <fullName>Manual_LCD__c</fullName>
    <label>Manual LCD</label>
    <type>DateTime</type>
</CustomField>