force-app/main/default/objects/HeatMap_Entry__c/fields/Manual_Object_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Manual_Object_Capacity__c</fullName>
    <label>Manual Object Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>