force-app/main/default/objects/HeatMap_Entry__c/fields/Manual_Workload_Value__c.field-meta.xml
<CustomField>
    <fullName>Manual_Workload_Value__c</fullName>
    <label>Manual Workload Value</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
            </value>
            <value>
                <fullName>Protected</fullName>
            </value>
            <value>
                <fullName>Not Protected</fullName>
            </value>
            <value>
                <fullName>NA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>