force-app/main/default/objects/HeatMap_Entry__c/fields/Product_Edition__c.field-meta.xml
<CustomField>
    <fullName>Product_Edition__c</fullName>
    <label>Product Edition</label>
    <length>255</length>
    <type>Text</type>
</CustomField>