force-app/main/default/objects/HeatMap_Entry__c/fields/Total_License_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_License_Count__c</fullName>
    <description>Created as part of MKT26-1106 to store the license count for Telemetry</description>
    <label>Total License Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>